--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-	"id": "obsidian-inline-graph",
-	"name": "Inline Graph",
-	"version": "1.0.0",
+	"id": "obsidian-inline-local-graph",
+	"name": "Inline Local Graph",
+	"version": "0.1.0",
 	"minAppVersion": "0.15.0",
-	"description": "Demonstrates some of the capabilities of the Obsidian API.",
+	"description": "A plugin that allows you to visualize the local graph inline within your notes.",
 	"author": "Obsidian",
 	"authorUrl": "https://obsidian.md",
 	"fundingUrl": "https://obsidian.md/pricing",
