--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,10 @@
 {
-	"id": "obsidian-inline-local-graph",
+	"id": "inline-local-graph",
 	"name": "Inline Local Graph",
 	"version": "0.9.0",
 	"minAppVersion": "0.15.0",
 	"description": "A plugin that allows you to visualize the local graph inline within your notes.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"author": "TKOxff <tkoxff@gmail.com>",
+	"authorUrl": "https://github.com/TKOxff",
 	"isDesktopOnly": false
 }
