--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
-	"name": "obsidian-sample-plugin",
-	"version": "1.0.0",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+	"name": "inline-local-graph",
+	"version": "0.9.2",
+	"description": "A plugin that allows you to visualize the local graph inline within your notes.",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
 		"version": "node version-bump.mjs && git add manifest.json versions.json"
 	},
-	"keywords": [],
-	"author": "",
+	"keywords": [
+		"obsidian",
+		"graph",
+		"local graph",
+        "inline graph",
+        "inline local graph",
+		"plugin"
+	],
+	"author": "TKOxff <tkoxff@gmail.com>",
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^16.11.6",
